--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kls_project
-description: 'A new Flutter project.'
-publish_to: 'none'
+description: "A new Flutter project."
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -19,15 +19,19 @@ dependencies:
   just_audio_background: ^0.0.1-beta.15
   google_fonts: ^6.2.1
   path_provider: ^2.1.5
-  shared_preferences: ^2.5.2
   provider: ^6.1.2
   youtube_scrape_api: ^0.1.0
+  flutter_slidable: ^4.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
