--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audio_video_progress_bar: ^2.0.3
+  flutter_native_splash: ^2.4.5
 
 dev_dependencies:
   flutter_test:
