--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -3,13 +3,16 @@ flutter_native_splash:
   ios: true
   web: false
 
-  color: "F0F4F8"
+  color: "0D0D0D"
   image: "assets/images/splash_logo.png"
 
   # 다크 모드 설정
   color_dark: "#0D0D0D"
   # image_dark를 따로 지정하지 않으면 기본 image를 사용합니다
-
+  ios_content_mode: scaleAspectFit
+  android_gravity: center
   android_12:
-    color: "#F0F4F8"
+    color: "#0D0D0D"
     image: "assets/images/splash_logo.png"
+    icon_background_color: "#0D0D0D"
+    image_dark: "assets/images/splash_logo.png"
