--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: kls_project
-description: "A new Flutter project."
+name: Vibes
+description: "A simple YouTube music player app for Android and iOS."
 publish_to: "none"
 
 version: 1.0.0+1
