--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@ xmlns:tools="http://schemas.android.com/tools">
     <!-- ALSO ADD THIS PERMISSION IF TARGETING SDK 34 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
     <application
-        android:label="kls_project"
+        android:label="Vibes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
